--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -3,34 +3,57 @@ loaders:
 
 processors:
   - type: filter
+    expression: not name.startswith('_') and default()
+    documented_only: true
+    do_not_filter_modules: true
   - type: smart
   - type: crossref
+
 
 renderer:
   output_directory: .
   content_directory_name: docs
   type: mkdocs
 
+  markdown:
+    use_fixed_header_levels: true
+    header_level_by_type:
+      Module: 1
+      Class: 2
+      Method: 3
+      Function: 2
+      Data: 4
+    add_module_prefix: true
+    add_method_class_prefix: true
+    add_member_class_prefix: true
+    descriptive_module_title: true
+
   pages:
     - title: Home
       name: index
       source: readme.md
+    - title: Identity
+      contents:
+      - mainsail.identity.*
+    # - title: Transaction
+    #   contents:
+    #   - mainsail.transaction.*
 
   mkdocs_config:
-    site_name: ArkEcosystem python mainsail project
+    site_name: Python mainsail project
     repo_url: https://github.com/Moustikitos/python-mainsail
     repo_name: GitHub
     copyright: Copyright &copy; 2024 THOORENS Bruno - BSD licence
     extra_css:
-    - style.css
+      - style.css
     theme:
       name: mkdocs
       nav_style: light
       highlightjs: true
       hljs_languages:
-      - python
+        - python
     markdown_extensions:
-    - smarty
-    - def_list
-    - pymdownx.tasklist:
-        custom_checkbox: false
+      - smarty
+      - def_list
+      - pymdownx.tasklist:
+          custom_checkbox: false
